kubernetes/mosquitto-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:latest
          ports:
            - containerPort: 4038
          volumeMounts:
            - name: mosquitto-storage
              mountPath: /mosquitto
            - name: mosquitto-config
              mountPath: /mosquitto/config
              subPath: mosquitto.conf
      volumes:
        - name: mosquitto-storage
          emptyDir: {}
        - name: mosquitto-config
          configMap:
            name: mosquitto-config
