kubernetes/mosquitto-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-service
spec:
  selector:
    app: mosquitto
  ports:
    - protocol: TCP
      port: 4038
      targetPort: 4038
  type: NodePort
