kubernetes/mosquitto-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mosquitto-ingress
spec:
  rules:
    - host: mosquitto.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mosquitto-service
                port:
                  number: 4038
  tls:
    - hosts:
        - mosquitto.example.com
      secretName: mosquitto-tls-secret
